# OpenTouch-Remote

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  run.bat
src/: __init__.py  capture_engine.py  config.py  input_handler.py  network_utils.py  qr_display.py  server.py
tests/: test_opentouch.py
