[project]
name = "opentouch-remote"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dxcam>=0.0.5",
    "fastapi>=0.129.0",
    "numpy>=2.4.2",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "pynput>=1.8.1",
    "python-socketio>=5.16.1",
    "qrcode>=8.2",
    "uvicorn[standard]>=0.40.0",
]
